-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 14
-
Component/s: hotspot
-
b26
A new (young) region is registered too early in the collection set when its retired, so the concurrent sampling thread might not observe some values written to the region correctly during region retirement.
This may cause some prediction inaccuracies when re-sampling the young gen.
This may cause some prediction inaccuracies when re-sampling the young gen.
- blocks
-
JDK-8233919 Incrementally calculate the occupied cards in a heap region remembered set
-
- Resolved
-