8233998: New young regions registered too early in collection set

Reviewed-by: sangheki, sjohanss